[package]
name = "replicante_logging"
version = "0.1.4"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Replicante common logging logic"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../README.md"
keywords = ["replicante"]
license = "MIT"


[dependencies]
serde = "^1.0.34"
serde_derive = "^1.0.34"
slog = "^2.2.3"
slog-async = "^2.2.0"
slog-journald = { version = "^2.0.0", optional = true }
slog-json = "^2.2.0"


[features]
journald = ["slog-journald"]
