[package]
name = "replicante_agent_models"
version = "0.2.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "Replicante agent models shared with core"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
keywords = ["replicante"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
serde = "^1.0.34"
serde_derive = "^1.0.34"


[dev-dependencies]
serde_json = "^1.0.8"
