[package]
name = "replicante_util_actixweb"
version = "0.2.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "ActixWeb utils for Replicante"
documentation = "https://docs.rs/replicante_util_actixweb"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
license = "MIT"


[dependencies]
actix-http = "^1.0.1"
actix-service = "^1.0.5"
actix-web = "^2.0.0"
failure = "^0.1.5"
futures = "^0.3.4"
opentracingrust = "^0.4.0"
prometheus = "^0.9.0"
sentry = "^0.18.0"
slog = "^2.2.0"

replicante_util_failure = { version = "^0.1.3", path = "../failure" }


[dev-dependencies]
actix-rt = "^1.0.0"
sentry = { version = "^0.18.0", features = ["with_test_support"] }
