[package]
name = "replicante_util_actixweb"
version = "0.2.1"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "ActixWeb utils for Replicante"
documentation = "https://docs.rs/replicante_util_actixweb"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
license = "MIT"


[dependencies]
anyhow = "^1.0"
thiserror = "^1.0"
actix-web = "^4.0"
opentracingrust = "^0.4.0"
prometheus = "^0.13.0"
sentry = { version = "^0.27.0", features = ["anyhow"] }
slog = "^2.2.0"


[dev-dependencies]
actix-rt = "^2.0"
sentry = { version = "^0.27.0", features = ["anyhow", "test"] }
