[package]
name = "replicante_util_failure"
version = "0.1.2"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Helper functions to manage failures"
documentation = "https://github.com/replicante-io/common"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
keywords = ["replicante", "utility", "failure"]
license = "MIT"


[dependencies]
failure = "^0.1.5"
sentry = "^0.16.0"
serde = "^1.0.34"
serde_derive = "^1.0.34"
slog = "^2.2.0"
