[package]
name = "replicante_util_iron"
version = "0.1.3"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "A collection of Iron middlewares"
documentation = "https://docs.rs/replicante_util_iron"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
keywords = ["replicante", "utility", "iron"]
license = "MIT"


[dependencies]
failure = "^0.1.5"
iron = "^0.6.0"
opentracingrust = "^0.3.1"
prometheus = "^0.5.0"
serde_json = "^1.0.13"
slog = "^2.2.0"

replicante_util_failure = { version = "^0.1.0", path = "../failure" }


[dev-dependencies]
iron-test = "^0.6.0"
router = "^0.6.0"
