[package]
name = "replicante_util_iron"
version = "0.2.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "A collection of Iron middlewares"
documentation = "https://docs.rs/replicante_util_iron"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
keywords = ["replicante", "utility", "iron"]
license = "MIT"


[features]
with_test_support = []


[dependencies]
failure = "^0.1.5"
iron = "^0.6.0"
iron-json-response = "^0.6.0"
opentracingrust = "^0.3.1"
prometheus = "^0.5.0"
router = "^0.6.0"
sentry = "^0.15.4"
serde_json = "^1.0.13"
slog = "^2.2.0"

replicante_util_failure = { version = "^0.1.1", path = "../failure" }
replicante_util_tracing = { version = "^0.3.0", path = "../tracing" }


[dev-dependencies]
iron-test = "^0.6.0"
sentry = { version = "^0.15.4", features = ["with_test_support"] }
