[package]
name = "replicante_util_iron"
version = "0.3.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "A collection of Iron middlewares"
documentation = "https://docs.rs/replicante_util_iron"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
keywords = ["replicante", "utility", "iron"]
license = "MIT"


[badges]
maintenance = { status = "deprecated" }


[features]
with_test_support = []


[dependencies]
failure = "^0.1.5"
iron = "^0.6.0"
iron-json-response = "^0.6.0"
opentracingrust = "^0.4.0"
prometheus = "^0.8.0"
router = "^0.6.0"
sentry = "^0.18.0"
serde_json = "^1.0.13"
slog = "^2.2.0"

replicante_util_failure = { version = "^0.1.1", path = "../failure" }
replicante_util_tracing = { version = "^0.4.0", path = "../tracing" }


[dev-dependencies]
iron-test = "^0.6.0"
sentry = { version = "^0.18.0", features = ["with_test_support"] }
