[package]
name = "replicante_util_rndid"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Unique randomly generated IDs"
documentation = "https://docs.rs/replicante_util_rndid"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
keywords = ["replicante", "utility", "opentracing"]
license = "MIT"


[dependencies]
data-encoding = "^2.1.1"
rand = "^0.6.0"
serde = "^1.0.34"
serde_derive = "^1.0.34"
