[package]
name = "replicante_util_tracing"
version = "0.2.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "A collection of OpenTracing tools"
documentation = "https://docs.rs/replicante_util_tracing"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
keywords = ["replicante", "utility", "opentracing"]
license = "MIT"


[dependencies]
failure = "^0.1.5"
opentracingrust = "^0.3.1"
opentracingrust_zipkin = "^0.1.2"
serde = "^1.0.34"
serde_derive = "^1.0.34"
slog = "^2.2.1"

replicante_util_failure = { version = "0.1.0", path = "../failure" }

[dev-dependencies]
serde_yaml = "^0.8.0"
