[package]
name = "replicante_util_tracing"
version = "0.3.2"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "A collection of OpenTracing tools"
documentation = "https://docs.rs/replicante_util_tracing"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
keywords = ["replicante", "utility", "opentracing"]
license = "MIT"


[dependencies]
failure = "^0.1.5"
humthreads = "^0.1.3"
iron = "^0.6.0"
opentracingrust = "^0.3.3"
opentracingrust_zipkin = { version = "^0.2.0", features = ["kafka_transport"] }
reqwest = "^0.9.17"
serde = "^1.0.34"
serde_derive = "^1.0.34"
slog = "^2.2.1"

replicante_util_failure = { version = "^0.1.1", path = "../failure" }
replicante_util_upkeep = { version = "^0.1.0", path = "../upkeep" }

[dev-dependencies]
serde_yaml = "^0.8.0"
