[package]
name = "replicante_util_tracing"
version = "0.4.2"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2021"

description = "A collection of OpenTracing tools"
documentation = "https://docs.rs/replicante_util_tracing"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
keywords = ["replicante", "utility", "opentracing"]
license = "MIT"


[dependencies]
anyhow = "^1.0"
failure = "^0.1.5"
humthreads = "^0.2.0"
opentracingrust = "^0.4.0"
opentracingrust_zipkin = "^0.3.0"
reqwest = "^0.11.0"
serde = { version = "^1.0.34", features = ["derive"] }
slog = "^2.2.1"
thiserror = "^1.0"

replicante_util_upkeep = { version = "^0.2.1", path = "../upkeep" }

[dev-dependencies]
serde_yaml = "^0.9.0"
