[package]
name = "replicante_util_upkeep"
version = "0.2.2"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2021"

description = "Controll when a process should exit"
documentation = "https://docs.rs/replicante_util_upkeep"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/common"
readme = "../../README.md"
keywords = ["replicante", "utility"]
license = "MIT"


[dependencies]
crossbeam-channel = "^0.5.0"
humthreads = "^0.2.0"
signal-hook = "^0.3.0"
slog = "^2.4.1"


[dev-dependencies]
nix = "^0.25.0"
